# ips4o-benchmark-suite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: analyze_data.sh  compile_figures.sh
benchmark/distributions/: compile_figures.sh  data.txt  dist.tex  dist_plot.tex  generate.sh  names.tex  performance_par_pairwise_one_row.tex
benchmark/running_times/: b1_parallel_i10pc132_2019-10-21_13_23_12.txt  b1_parallel_i10pc132_2019-10-23_02_42_49.txt  b1_parallel_i10pc132_2019-11-01_04_13_37.txt  b1_parallel_i10pc132_2019-11-01_08_23_09.txt  b1_parallel_i10pc132_2019-11-21_20_11_46.txt  b1_parallel_i10pc132_2020-02-04_07_58_40.txt  b1_parallel_i10pc132_2020-02-04_15_04_55.txt  b1_parallel_i10pc132_2020-02-05_01_29_18.txt  b1_parallel_i10pc132_2020-03-21_02_10_30.txt  b1_parallel_i10pc132_2020-03-28_11_36_32.txt  b1_parallel_i10pc132_2020-03-28_12_32_42.txt  b1_parallel_i10pc132_2020-03-28_13_31_06.txt  b1_parallel_i10pc132_2020-03-28_14_27_41.txt  b1_parallel_i10pc132_2020-03-28_16_02_47.txt  b1_parallel_i10pc132_2020-03-28_19_26_47.txt  b1_parallel_i10pc132_2020-03-28_23_28_49.txt  b1_parallel_i10pc132_2020-03-29_03_58_30.txt  b1_parallel_i10pc132_2020-04-19_17_19_37.txt  b1_parallel_i10pc132_2020-04-19_18_26_31.txt  b1_parallel_i10pc132_2020-04-19_19_36_20.txt  b1_parallel_i10pc132_2020-04-19_20_44_10.txt  b1_parallel_i10pc132_2020-04-19_22_57_20.txt  b1_parallel_i10pc132_2020-04-20_02_49_36.txt  b1_parallel_i10pc132_2020-04-20_07_40_06.txt  b1_parallel_i10pc132_2020-04-20_11_39_40.txt  b1_parallel_i10pc132_2020-04-24_08_11_14.txt  b1_parallel_i10pc132_2020-04-24_09_10_09.txt  b1_parallel_i10pc132_2020-04-24_10_13_06.txt  b1_parallel_i10pc132_2020-04-24_11_12_54.txt  b1_parallel_i10pc132_2020-04-24_17_44_44.txt  b1_parallel_i10pc132_2020-04-24_21_20_15.txt  b1_parallel_i10pc132_2020-04-25_02_06_18.txt  b1_parallel_i10pc132_2020-04-25_05_56_56.txt  b1_parallel_i10pc132_2020-04-30_10_05_25.txt  b1_parallel_i10pc132_2020-05-23_08_52_52.txt  b1_parallel_i10pc132_2020-05-23_09_06_22.txt  b1_parallel_i10pc132_2020-05-23_09_20_38.txt  b1_parallel_i10pc132_2020-05-23_09_34_00.txt  b1_parallel_i10pc132_2020-05-23_11_02_19.txt  b1_parallel_i10pc132_2020-05-23_12_07_49.txt  (+394 more)
benchmark/running_times/R/: performance_plot_parallel.R  performance_plot_parallel_ips4o_vs_pbbs.R  performance_plot_parallel_ips4o_vs_quickbal.R  performance_plot_parallel_uint64_pair.R  performance_plot_parallel_uint64_pair_ips4o_ips3ro.R  performance_plot_parallel_uint64_pair_ips4o_region.R  performance_plot_sequential.R  performance_plot_sequential_ips3ro_vs_pdq.R  performance_plot_sequential_ips3ro_vs_ska.R  performance_plot_sequential_ips4o_vs_pdq.R  performance_plot_sequential_ips4o_vs_ska.R  performance_plot_sequential_primitives.R
benchmark/running_times/load_database/: load_database.tex
cmake/: default_build_type.cmake
src/: benchmark.hpp  config.hpp  datagenerator.cpp  datatypes.hpp  name_extractor.hpp  sequence.hpp  timer.hpp  typename.hpp  vector_types.hpp
src/algorithm/: aspas.hpp  aspasparallel.hpp  blockquicksort.hpp  gnuparallel.hpp  gnuquicksortbalanced.hpp  gnuquicksortunbalanced.hpp  imsdradix.hpp  inplace_msd_radixsort.hpp  ippradixsort.hpp  ips2ra.hpp  ips2raparallel.hpp  ips3ro.hpp  ips3roparallel.hpp  ips4o.hpp  ips4omlparallel.hpp  ips4ooldparallel.hpp  ips4oparallel.hpp  learnedsort.hpp  mcstlbq.hpp  mcstlmwm.hpp  mcstlubq.hpp  pbbsradixsort.hpp  pbbssamplesort.hpp  pdqsort.hpp  ps4o.hpp  ps4oparallel.hpp  quickxsort.hpp  raduls.hpp  regionsort.hpp  skasort.hpp  ssss.hpp  stdsort.hpp  tbb.hpp  timsort.hpp  wikisort.hpp  yaroslavskiy.hpp
src/benchmark/: benchmark_aspas.cpp  benchmark_aspasparallel.cpp  benchmark_blockquicksort.cpp  benchmark_gnuparallel.cpp  benchmark_gnuquicksortbalanced.cpp  benchmark_gnuquicksortunbalanced.cpp  benchmark_imsdradix.cpp  benchmark_inplacemsdradixsort.cpp  benchmark_ippradixsort.cpp  benchmark_ips2ra.cpp  benchmark_ips2raparallel.cpp  benchmark_ips3ro.cpp  benchmark_ips3roparallel.cpp  benchmark_ips4o.cpp  benchmark_ips4oml.cpp  benchmark_ips4omlparallel.cpp  benchmark_ips4ooldparallel.cpp  benchmark_ips4oparallel.cpp  benchmark_learnedsort.cpp  benchmark_mcstlbq.cpp  benchmark_mcstlmwm.cpp  benchmark_mcstlubq.cpp  benchmark_pbbsradixsort.cpp  benchmark_pbbssamplesort.cpp  benchmark_pdqsort.cpp  benchmark_ps4o.cpp  benchmark_ps4oparallel.cpp  benchmark_quickxsort.cpp  benchmark_raduls.cpp  benchmark_regionsort.cpp  benchmark_skasort.cpp  benchmark_ssss.cpp  benchmark_stdsort.cpp  benchmark_tbbparallelsort.cpp  benchmark_timsort.cpp  benchmark_wikisort.cpp  benchmark_yaroslavskiy.cpp
src/generator/: generator.hpp  simple_alias.hpp  zipf_distribution.hpp
src/parallel/: parallel_checker.hpp  parallel_for.hpp
src/pbbs_generators/: data_types.h  utils.h
